# mock-test

./: .gitignore  OVERVIEW.md  README.md  USER_GUIDE.md  compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f34cfff60b55_initial_migration.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/api/routes/: markets.py
backend/app/services/: __init__.py  markets.py
backend/tests/: conftest.py  test_market_flows.py
frontend/: Dockerfile  README.md  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/markets/[id]/: page.tsx
frontend/src/components/market/: create-market-form.tsx  market-card.tsx  market-detail.tsx  order-form.tsx
frontend/src/components/navigation/: breadcrumbs.tsx
frontend/src/components/providers/: query-provider.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx  textarea.tsx
frontend/src/lib/: api.ts  types.ts
